<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.gabrielmiguelpedro.maclarenapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_wallet"
        android:name="com.gabrielmiguelpedro.maclarenapp.ui.wallet.WalletFragment"
        android:label="@string/menu_wallet"
        tools:layout="@layout/fragment_wallet" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.gabrielmiguelpedro.maclarenapp.ui.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.gabrielmiguelpedro.maclarenapp.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_help"
        android:name="com.gabrielmiguelpedro.maclarenapp.ui.help.HelpFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_help" />





<!--    <fragment-->
<!--        android:id="@+id/nav_share"-->
<!--        android:name="com.gabrielmiguelpedro.maclarenapp.ui.share.ShareFragment"-->
<!--        android:label="@string/menu_exitaccount"-->
<!--        tools:layout="@layout/fragment_share" />-->

</navigation>