<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp.sign_in_email">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/calibri_bold"
            android:text="@string/bem_vindo"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="33sp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="21dp"
            android:layout_marginHorizontal="50dp"
            android:fontFamily="@font/calibri_bold"
            android:text="@string/intr_email_text"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp"
            />

        <EditText
            android:id="@+id/editText4"
            style="@style/editText_style"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:hint="@string/user_maclaren_com"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/colorHint" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="15dp"
            android:background="@drawable/buttons"
            android:fontFamily="@font/calibri_bold"
            android:text="@string/seguinte"
            android:textAlignment="center"
            android:textSize="20sp" />
    </LinearLayout>
</FrameLayout>