<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECECEC"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="45dp"
            app:srcCompat="@drawable/logo_icon_lateral" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="404dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/calibri_bold"
                android:text="@string/bem_vindo"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="33sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="21dp"
                android:fontFamily="@font/calibri_bold"
                android:text="@string/intr_email_text"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/si_email"
                style="@style/editText_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginVertical="15dp"
                android:layout_marginTop="28dp"
                android:ems="10"
                android:hint="@string/user_maclaren_com"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/colorHint" />

            <Button
                android:id="@+id/btn_si_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginVertical="15dp"
                android:background="@drawable/buttons"
                android:fontFamily="@font/calibri_bold"
                android:text="@string/seguinte"
                android:textAlignment="center"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="101dp"
                android:layout_height="22dp"
                android:layout_marginStart="96dp"
                android:layout_weight="1"
                android:fontFamily="@font/calibri_bold"
                android:text="@string/tem_conta"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="120dp"
                android:layout_height="23dp"
                android:layout_marginEnd="92dp"
                android:layout_weight="1"
                android:fontFamily="@font/calibri_bold"
                android:text="@string/iniciar_sessao"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>