<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECECEC"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="404dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center_horizontal|center_vertical">

            <TextView
                android:id="@+id/autorizar_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/calibri_bold"
                android:text="@string/alterarEmail"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="33sp" />

            <TextView
                android:id="@+id/autorizar_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="21dp"
                android:fontFamily="@font/calibri_bold"
                android:text="@string/alterarEmailConteudo"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/si_email_alterar"
                style="@style/editText_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginVertical="15dp"
                android:layout_marginTop="28dp"
                android:ems="10"
                android:hint="@string/user_maclaren_com"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/colorHint" />

            <Button
                android:id="@+id/btn_si_alterar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginHorizontal="40dp"
                android:layout_marginVertical="15dp"
                android:background="@drawable/buttons"
                android:fontFamily="@font/calibri_bold"
                android:text="@string/alterar"
                android:textAlignment="center"
                android:textColor="#ececec"
                android:textSize="20sp" />
        </LinearLayout>

</LinearLayout>
