<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECECEC"
    tools:context=".VerificationCodeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="45dp"
            app:srcCompat="@drawable/logo_icon_lateral" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/autorizar_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/calibri_bold"
                android:text="@string/est_quase_no_fim"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="33sp" />

            <TextView
                android:id="@+id/autorizar_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="21dp"
                android:fontFamily="@font/calibri_bold"
                android:text="@string/introduza_o_c_digo_recebido_no_email"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/code_tv"
                style="@style/editText_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginVertical="15dp"
                android:layout_marginTop="28dp"
                android:digits="0123456789"
                android:ems="10"
                android:hint="@string/code"
                android:inputType="numberDecimal"
                android:textColor="@color/black"
                android:textColorHint="@color/colorHint" />

            <Button
                android:id="@+id/btn_end_vc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginVertical="15dp"
                android:background="@drawable/buttons"
                android:fontFamily="@font/calibri_bold"
                android:text="@string/finalizar"
                android:textAlignment="center"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/btn_back_vc"
                style="@style/editText_style"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:fontFamily="@font/calibri_bold"
                android:text="@string/back"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>